# finos-5-spot

./: .gitignore  .trivyignore  Cargo.toml  Dockerfile  Dockerfile.chainguard  Makefile  README.md  deny.toml
.cargo/: audit.toml
.claude/: CHANGELOG.md  CLAUDE.md  SKILL.md  settings.json
.claude/rules/: architecture-driven-development.md
.github/: dependabot.yml
.github/actions/prepare-docker-binaries/: action.yaml
.github/codeql/: codeql-config.yml
.github/scripts/: calm-args.bats  calm-args.sh
.github/workflows/: CALM.md  build.yaml  calm-test.yaml  calm.yaml  codeql.yaml  docs.yaml  fuzz.yaml  sast.yaml  scorecard.yaml
.vex/: .affected-functions.json  CVE-2010-4756.json  CVE-2010-4756.toml  CVE-2018-20796.json  CVE-2018-20796.toml  CVE-2019-1010022.json  CVE-2019-1010022.toml  CVE-2019-1010023.json  CVE-2019-1010023.toml  CVE-2019-1010024.json  CVE-2019-1010024.toml  CVE-2019-1010025.json  CVE-2019-1010025.toml  CVE-2019-9192.json  CVE-2019-9192.toml  CVE-2026-27171.json  CVE-2026-27171.toml  CVE-2026-4046.json  CVE-2026-4046.toml  CVE-2026-4437.json  CVE-2026-4437.toml  CVE-2026-4438.json  CVE-2026-4438.toml  CVE-2026-5358.json  CVE-2026-5450.json  CVE-2026-5928.json  GHSA-cq8v-f236-94qc.json  README.md
.vex/auto/: vex.auto-presence.json  vex.auto-reachability.json
.vex/snapshot/: README.md
deploy/admission/: agent-pod-security-binding.yaml  agent-pod-security-policy.yaml  child-cluster-kata-runtime-mutatingpolicy.yaml  child-cluster-kata-runtime-mutatingpolicybinding.yaml  controller-deployment-binding.yaml  controller-deployment-policy.yaml  validatingadmissionpolicy.yaml
deploy/crds/: capitalmarketsschedule.yaml  scheduledmachine.yaml  timebasedspotschedule.yaml
deploy/deployment/: deployment.yaml  service.yaml
deploy/deployment/rbac/: clusterrole.yaml
deploy/kata-config-agent/: daemonset.yaml  kustomization.yaml  rbac.yaml
deploy/node-agent/: daemonset.yaml
deploy/spot-schedule-providers/capital-markets/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  kustomization.yaml  serviceaccount.yaml
deploy/spot-schedule-providers/time-based/: clusterrole.yaml  clusterrolebinding.yaml  deployment.yaml  kustomization.yaml  serviceaccount.yaml
docs/: mkdocs.yml
docs/adr/: 0001-adopt-architecture-driven-development.md  0002-kata-config-delivery-via-spec-kata.md  0003-in-pod-host-service-restart-via-nsenter.md  0004-agent-pod-security-exception-boundary-vap.md  0005-remove-kata-destpath-fixed-host-path.md  0006-pluggable-spot-schedule-provider-contract.md  0007-crd-multi-version-and-conversion.md  0008-autovex-presubmission-gate.md  0009-unify-schedule-as-provider-reference.md  README.md  template.md
docs/architecture/calm/: README.md  architecture.json
docs/reference/: api.md
docs/src/: changelog.md  index.md
docs/src/advanced/: capi-integration.md
docs/src/concepts/: architecture.md  child-cluster-kubeconfig.md  emergency-reclaim.md  kata-config-delivery.md  machine-lifecycle.md  scheduled-machine.md  schedules.md  spot-schedule.md
docs/src/development/: building.md  setup.md
docs/src/guides/: capital-markets-schedule.md  create-your-own-provider.md  kata-config.md  time-based-schedule.md
docs/src/installation/: controller.md  crds.md  prerequisites.md  quickstart.md
docs/src/operations/: configuration.md  monitoring.md  multi-instance.md  troubleshooting.md
docs/src/reference/: api.md  cli.md  spot-schedule-contract.md
docs/src/security/: admission-validation.md  crd-attack-surface.md  index.md  threat-model.md  vex.md
examples/: capitalmarketsschedule.yaml  scheduledmachine-bad-taint.yaml  scheduledmachine-basic.yaml  scheduledmachine-child-cluster.yaml  scheduledmachine-kata.yaml  scheduledmachine-spot-schedule.yaml  scheduledmachine-tainted.yaml  scheduledmachine-weekend.yaml  timebasedspotschedule.yaml
examples/workshop/: README.md  scheduledmachine-business-hours.yaml  teardown.sh
src/: auto_vex_presence.rs  auto_vex_presence_tests.rs  auto_vex_reachability.rs  auto_vex_reachability_tests.rs  constants.rs  crd.rs  crd_tests.rs  health.rs  kata_config_agent.rs  kata_config_agent_tests.rs  labels.rs  labels_tests.rs  lib.rs  loop_protection.rs  loop_protection_tests.rs  main.rs  metrics.rs  metrics_tests.rs  netlink_proc.rs  netlink_proc_tests.rs  reclaim_agent.rs
src/providers/: capital_markets.rs  capital_markets_tests.rs  mod.rs  time_based.rs  time_based_tests.rs
src/reconcilers/: child_client.rs  child_client_tests.rs  child_watch.rs  child_watch_tests.rs  helpers.rs  helpers_tests.rs  mod.rs  scheduled_machine.rs  scheduled_machine_tests.rs  spot_schedule.rs  spot_schedule_tests.rs  spot_schedule_watch.rs  spot_schedule_watch_tests.rs
tests/: integration_child_kubeconfig.rs  integration_emergency_reclaim.rs  integration_kata_config.rs  integration_netlink_proc.rs  integration_spot_schedule.rs
tools/: assemble_openvex.py  validate-vex.sh  validate_vex.py
tools/tests/: assemble-openvex-tests.sh  validate-vex-tests.sh
tools/tests/fixtures/: README.md
tools/tests/fixtures/bad-timestamp/: CVE-2025-0016.toml
tools/tests/fixtures/duplicate-cve/: first.toml  second.toml
tools/tests/fixtures/empty-products/: CVE-2025-0015.toml
tools/tests/fixtures/invalid-cve-format/: CVE-bad.toml
tools/tests/fixtures/invalid-justification/: CVE-2025-0018.toml
tools/tests/fixtures/invalid-status/: CVE-2025-0014.toml
tools/tests/fixtures/malformed-toml/: CVE-2025-9999.toml
tools/tests/fixtures/missing-action-statement/: CVE-2025-0019.toml
tools/tests/fixtures/missing-author/: CVE-2025-0012.toml
tools/tests/fixtures/missing-cve/: case.toml
tools/tests/fixtures/missing-justification/: CVE-2025-0017.toml
tools/tests/fixtures/missing-products/: CVE-2025-0011.toml
tools/tests/fixtures/missing-status/: CVE-2025-0010.toml
tools/tests/fixtures/missing-timestamp/: CVE-2025-0013.toml
tools/tests/fixtures/valid-affected/: CVE-2025-0003.toml
tools/tests/fixtures/valid-multiple/: CVE-2025-0001.toml  CVE-2025-0002.toml
tools/tests/fixtures/valid-single/: CVE-2025-0001.toml
(+2 files in other folders)
